Specify SKYCRAWLERS_ENV

--- a/app.json
+++ b/app.json
@@ -4,6 +4,9 @@
   "env":{
     "HEROKU_APP_NAME": {
       "required": true
+    },
+    "SKYCRAWLERS_ENV": {
+      "required": true
     }
   },
   "addons": [
